--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,33 @@
 body {
     margin: 0;
     padding: 0;
-    background: #444444;
+    height: 100vh;
+    box-sizing: border-box;
+    min-height: 100%;
+    color: #f5f5f1;
+}
+
+#root{
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    min-height: 100%;
+    box-sizing: border-box;
+    background-image: url('./assets/home-image.jpeg');
+}
+
+
+html{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+* {
+    box-sizing: border-box;
 }
