--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,15 +1,11 @@
 .home-container {
     width: 100%;
     height: 100vh;
-    
 }
 
 .home-content-input {
     display: flex;
-}
-
-#home-input{
-    height: 60px;
+    text-align: center;
 }
 
 .home-button-text-icon {
