--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,41 @@
-body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    box-sizing: border-box;
-    min-height: 100%;
-    color: #f5f5f1;
-}
-
+/*
+ * 윈도우 전체를 차지하게 #root 요소 높이 주는 방법 = min-height:100vh;
+ * ( height 사용하지 말기)
+ * (100% 사용시 렌더링될 자식 요소가 아닌 부모 요소에 포커스가 맞춰져서 다른 디바이스에서 컨텐츠 스크롤 오류가 발생할 수 있음)
+ css viewport 가 뭔지 확인하기 이부분 때문에 100%가 아닌 100vh를 사용해야함.
+*/
 #root{
     margin: 0;
-    padding: 0;
-    height: 100vh;
-    min-height: 100%;
+    min-height: 100vh;
     box-sizing: border-box;
     background-image: url('./assets/home-image.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-
+/*회원인증 페이지 배경화면이 페이지 전체 영역 채우기 위한 용도 -> 필요없으면 삭제*/
 html{
     height: 100%;
     margin: 0;
     padding: 0;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    min-height: 100vh;
+    color: #f5f5f1;
+    background-color: black;
+}
+
+/* 라우트 렌더링 페이지(App.js) 높이 페이지 전체 채우기 위한 용도*/
+.routeHome {
+    height:100vh;
+}
+
+
+/*링크 색상 및 밑줄 삭제*/
 a{
     text-decoration: none;
     color: inherit;
